<resources>

    <string name="app_name">Logline Creator</string>
    <string name="hint">Hint</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="toolbar_your_loglines">Your loglines</string>
    <string name="toolbar_create">Create a logline</string>
    <string name="close">Close</string>
    <string name="selected_configuration">01</string>


    <!-- dummies -->
    <string name="dummy_major_event">major event</string>
    <string name="dummy_main_char">main character</string>
    <string name="dummy_theme">theme</string>
    <string name="dummy_main_action">main action</string>
    <string name="dummy_mid_point">mid point event</string>
    <string name="dummy_story_world">story world</string>
    <string name="dummy_deadline">deadline</string>
    <string name="dummy_ready">your absolutely magnificent logline</string>
    <string name="dummy_change_hint">disable swiping</string>

    <!-- main acitivity -->
    <string name="main_button_start">Start</string>
    <string name="search_title">Search</string>
    <string name="main_text_when_empty">Answer 9 simple questions about your story and get a full-fledged movie logline</string>
    <string name="main_create_button">Create</string>
    <string name="words_count">%d WORDS</string>
    <string name="you_want_delete">You want to delete a logline</string>
    <string name="are_you_sure">Are you sure you want to permanently delete this logline?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- main character fragment-->
    <string name="mc_header">Main character</string>
    <string name="mc_info">Describe your Main Character (MC)</string>
    <string name="mc_info_eg">No name, please. Just who they are and what they do, e.g. \"a lonesome cowboy\" or \"an arrogant publicist\".</string>
    <string name="mc_gender">What is the gender of your MC?</string>
    <string-array name="mc_gender_choice">
        <item></item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="mc_gender_eg">Is the MAIN CHARACTER described in the event by more than \"he\" or \"she\"?</string>
    <string name="mc_hint">Typically this includes the character\'s function or job, and some weakness
        and/or strength. Loglines only have character names if the names are already a part of popular culture.</string>


    <!-- major event fragment -->
    <string name="major_event_hint">Events are things that happen to the main character and motivate their actions.
        They\'re never anything the character does. Here we\'re looking for the story\'s main event or
        Inciting Incident/Call To Adventure. This typically happens in the first 10–20 minutes.</string>
    <string name="major_event_header">Major event</string>
    <string name="major_event_info">What is the MAJOR EVENT that kicks off the story?</string>
    <string name="major_event_info_eg">Full sentence, e.g. \"A shark kills a swimmer.\"</string>
    <string name="major_event_incl_mc">Major event include the MC</string>

    <!-- theme fragment -->
    <string name="theme_header">Theme</string>
    <string name="theme_i_want">I want to include a THEME or Character Arc. </string>
    <string name="theme_hint">Even if theme is important in most stories, it is not critical to a basic logline.
        And often theme is established further down the development process.
        Leave it out for now, or try something and change it later.
        \n\nStart your answer with \"to\", e.g. \"to become less selfish\", \"to find purpose\", \"to re-establish her self-esteem\".  </string>
    <string name="theme_info">What does the MC have to learn/overcome?</string>
    <string name="theme_eg">E.g. \"to become a better person\".</string>

    <!--  main action fragment-->
    <string name="main_action_header">Main action</string>
    <string name="action_hint">The main action or goal is \'what the story is about\' for the broad audience.
        It is that part of the story we can visualise when we hear the logline, and
        which (hopefully) makes us want to see the film or show episode. It is the
        objective the main character will pursue for most of the time.
        \n\nStart your answer with \"to\", e.g. \"to find his son and return him home\".  </string>
    <string name="main_action_info">What is the story\'s main ACTION/GOAL?</string>
    <string name="main_action_eg">E.g. ""to do the Main Action"</string>

    <!-- mid point fragment -->
    <string name="mid_point_hint">This event often happens just when the goal is within reach.
        It flips the character\'s fortune, and any gains now seem lost.
        But it may also be the motivation for the character\'s change in goal or approach.
        After the MPR, they often change their behaviour and start doing \'the right thing\'.</string>
    <string name="mid_point_hint_alternative">This is optional, in case you know what an MPR is.
        \n\nThis Event makes the character change their behaviour usually for the better in the 2nd half of the story.
        \n\nThis can be a change of approach, or a new goal entirely, E.g. \"to venture into the ocean to kill the shark\".
    </string>
    <string name="mid_point_i_want">I want to include an MPR (Mid Point Reversal)</string>
    <string name="mid_point_header">Mid Point Reversal</string>
    <string name="mid_point_eg">E.g. \"something happens that changes everything,\"</string>
    <string name="mid_point_info">"What is the MPR EVENT? "</string>
    <string name="mid_point_after_info">"What does the MC do/pursue after the MPR Event? "</string>
    <string name="mid_point_after_eg">E.g. \"to take a New Approach\"</string>


    <!-- world fragment -->
    <string name="world_hint">Only add this if it is essential to understand the story.</string>
    <string name="world_question">Is this a special world, with special rules?</string>
    <string name="world_info">How is the world of your story different from reality?</string>
    <string name="world_eg">E.g. "a Special World"</string>
    <string name="world_subheader">Story world</string>

    <!-- deadline fragment -->
    <string name="deadline_hint">To make the logline work, write this as a full sentence like in the examples.
        \n\nOften the stakes are clear from the Main Event. But in some cases, adding negative
        stakes adds urgency to the logline, ultimately improving its emotional impact.</string>
    <string name="deadline_question">Include a Deadline/Stakes?</string>
    <string name="deadline_info">What happens if the main character fails?</string>
    <string name="deadline_eg">E.g. \'the police catches the girls\', or \'the shark attacks again\'.</string>
    <string name="deadline_subheader">Deadline</string>


    <!-- ready fragment -->
    <string name="logline_ready">Your logline is ready!</string>
    <string name="logline_your">Your logline</string>
    <string name="save">Save</string>
    <string name="share">Share on Twitter</string>
    <string name="copy">Copy</string>
    <string name="ready_learn">Learn the basics of writing strong stories</string>
    <string name="ready_learn_url">https://www.scriptwriting.courses/</string>
    <string name="ready_continue">Continue writing story in Story Architect</string>
    <string name="ready_continue_url">https://www.starc.app/download</string>
    <string name="dummy_logline">На Аляске терпит крушение самолет, и оставшиеся в живых пассажиры оказываются в плену безлюдной пустыни. Смогут ли они выбраться из этой безнадежной передряги?</string>
    <string name="dummy_date">11.02.2023</string>
    <string name="dummy_word_count">256 слов</string>
    <string name="twitter_share_base_url">https://www.twitter.com/intent/tweet?text=</string>
    <string name="copied">Copied!</string>
    <string name="pleaseFill">Please fill all the required fields above</string>

    <!-- viewModels -->
    <string name="gender_male">he</string>
    <string name="gender_female">she</string>
    <string name="gender_other">they</string>
    <string name="nothing_found">Nothing found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>