<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.creativeFragments.Step8ReadyFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_ready"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/logline_your"
        app:boxStrokeColor="?attr/colorPrimary"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/our_hint_grey"
        android:nestedScrollingEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/RoundedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:text="@string/dummy_ready"
            android:nestedScrollingEnabled="true"
            android:textColorHint="@color/our_hint_grey"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="16dp"
        app:strokeColor="@color/our_purple"
        android:backgroundTint="@color/our_purple"
        android:textColor="@color/white"
        style="@style/MyRoundButtonsStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_ready" />

</androidx.constraintlayout.widget.ConstraintLayout>