<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.creativeFragments.Step3ThemeFragment">

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/theme_header"
        style="@style/MySubHeaderTextAppearance"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_theme_i_want"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/theme_i_want"
        style="@style/MyPlainTextAppearance"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@id/switch_major_event_incl_mc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_major_event_incl_mc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_theme_i_want"
        app:layout_constraintBottom_toBottomOf="@id/tv_theme_i_want"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_theme"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/theme_info"
        app:boxStrokeColor="?attr/colorPrimary"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/our_hint_grey"
        android:nestedScrollingEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme_i_want"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/RoundedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:nestedScrollingEnabled="true"
            android:textColorHint="@color/our_hint_grey"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_theme_eg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_theme"
        android:layout_marginHorizontal="28dp"
        android:gravity="start"
        style="@style/MyExplanationsTextAppearance"
        android:text="@string/theme_eg"/>

</androidx.constraintlayout.widget.ConstraintLayout>