<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.creativeFragments.Step4MainActionFragment">

    <TextView
        android:id="@+id/tv_main_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/main_action_header"
        style="@style/MySubHeaderTextAppearance"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_main_action"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/main_action_info"
        app:boxStrokeColor="?attr/colorPrimary"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/our_hint_grey"
        android:nestedScrollingEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/RoundedStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_main_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:nestedScrollingEnabled="true"
            android:textColorHint="@color/our_hint_grey"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_theme_eg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_main_action"
        android:layout_marginHorizontal="28dp"
        android:gravity="start"
        style="@style/MyExplanationsTextAppearance"
        android:text="@string/main_action_eg"/>

</androidx.constraintlayout.widget.ConstraintLayout>