<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.creativeActivity.creativeFragments.Step5MidPointFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_mid_point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/mid_point_header"
            style="@style/MySubHeaderTextAppearance"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_mid_point_i_want"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/mid_point_i_want"
            style="@style/MyPlainTextAppearance"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/switch_include_mpr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mid_point" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_include_mpr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_mid_point_i_want"
            app:layout_constraintBottom_toBottomOf="@id/tv_mid_point_i_want"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_mid_point"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/mid_point_info"
            app:boxStrokeColor="?attr/colorPrimary"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/our_hint_grey"
            android:nestedScrollingEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_mid_point_i_want"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/RoundedStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mid_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:nestedScrollingEnabled="true"
                android:textColorHint="@color/our_hint_grey"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_mid_point_eg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_mid_point"
            android:layout_marginHorizontal="28dp"
            android:gravity="start"
            style="@style/MyExplanationsTextAppearance"
            android:text="@string/mid_point_eg"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_mid_point_after"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18dp"
            android:hint="@string/mid_point_after_info"
            app:boxStrokeColor="?attr/colorPrimary"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/our_hint_grey"
            android:nestedScrollingEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_mid_point_eg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/RoundedStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mid_point_after"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:nestedScrollingEnabled="true"
                android:textColorHint="@color/our_hint_grey"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_mid_point_after_eg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_mid_point_after"
            android:layout_marginHorizontal="28dp"
            android:gravity="start"
            style="@style/MyExplanationsTextAppearance"
            android:text="@string/mid_point_after_eg"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_mpr_included"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="tv_mid_point_after_eg, tv_mid_point_eg,ti_mid_point, ti_mid_point_after"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

