<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.creativeActivity.creativeFragments.Step1MainCharFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_main_char"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/mc_header"
            style="@style/MySubHeaderTextAppearance"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_mc_info"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:boxStrokeColor="?attr/colorPrimary"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/our_hint_grey"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_char"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/RoundedStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mc_info"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/mc_info"
                android:textColorHint="@color/our_hint_grey"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_mc_info_eg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_mc_info"
            android:layout_marginHorizontal="28dp"
            android:gravity="start"
            style="@style/MyExplanationsTextAppearance"
            android:text="@string/mc_info_eg"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_mc_gender"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_mc_info_eg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/spinner_item_gender"
            style="@style/SpinnerStyle"

            android:entries="@array/mc_gender_choice"
            app:shapeAppearance="@style/RoundedStyle"/>

        <TextView
            android:id="@+id/tv_mc_gender_eg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_mc_gender"
            android:layout_marginHorizontal="28dp"
            android:gravity="start"
            style="@style/MyExplanationsTextAppearance"
            android:text="@string/mc_gender_eg"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
