<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="1dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    app:strokeColor="@android:color/transparent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_icon_short_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:gravity="center"
            android:src="@drawable/ic_short_text"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />


        <TextView
            android:id="@+id/tv_logline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="14sp"
            android:textColor="@color/our_text_grey"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="12dp"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_date"
            tools:text="@string/dummy_logline" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/our_text_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline20"
            android:layout_marginBottom="8dp"
            android:textSize="10sp"
            tools:text="@string/dummy_date"/>

        <TextView
            android:id="@+id/tv_word_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_date"
            android:textColor="@color/our_text_grey"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="12dp"
            android:textSize="10sp"
            tools:text="@string/dummy_word_count"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>